--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,711 @@
-.App {
+#Frame1000007056 {
+  height: 67px;
+  background-color: #373636;
+  color: white;
+  display: flex;
+}
+
+#Frame1000007056 span {
+  margin: auto;
+  font-weight: 500;
+}
+
+#Frame1000007056 button {
+  position: absolute;
+  width: 355px;
+  height: 51px;
+  right: 100px;
+  font-weight: 600;
+  cursor: pointer;
+  top: 8px;
+  background: #3A643B;
+  border: none;
+  color: white;
+  border-radius: 16px;
+}
+
+/*Top Navbar*/
+#topNavBar {
+  height: 160px;
+}
+
+.logo {
+  position: relative;
+  width: 267px;
+  height: 37px;
+  left: calc(50% - 267px/2 + 0.5px);
+  background-image: url(images/image45.png);
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  top: 22px;
+}
+
+.mobNo {
+  width: 186px;
+  height: 32px;
+  position: relative;
+  top: 32px;
+  left: 20px;
+  display: flex;
+  opacity: 1;
+  gap: 4px;
+  color: #3A643C;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 140%;
+}
+
+.mobImg {
+  width: 32px;
+  height: 32px;
+  display: flex;
+}
+
+.mobImg svg {
+  margin: auto;
+}
+
+
+.frame1000006348 a {
+  text-decoration: none;
+  color: #3A643B;
+  font-weight: 600;
+  font-style: SemiBold;
+  font-size: 20px;
+  line-height: 140%;
+  letter-spacing: 0%;
+  text-transform: capitalize;
+}
+
+.frame1000006348 {
+  display: flex;
+  position: relative;
+  width: 688px;
+  height: 28px;
+  top: 50px;
+  gap: 40px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.group1000006493 {
+  display: flex;
+  position: absolute;
+  gap: 10px;
+  opacity: 1;
+  width: 256px;
+  /*top: 93px;*/
+  right: 111px;
+
+}
+
+.gIcon {
+  cursor: pointer;
+  background-color: #D2D9D2;
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  padding: 6px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#gDropdown {
+  display: flex;
+  align-items: center;
+}
+
+#gDropdown svg {
+  cursor: pointer;
+}
+
+.gAlert2 {
+  background-color: #3A643C;
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  color: white;
+  position: absolute;
+  font-size: 10px;
+  top: -10px;
+  left: 90px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.gAlert {
+  background-color: #3A643C;
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  color: white;
+  position: absolute;
+  font-size: 10px;
+  top: -10px;
+  left: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/*Top Navbar End*/
+
+
+
+/*Searchbar*/
+.searchbar {
+  /*width: 1440px;*/
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 202px;
+  top: 213px;
+  opacity: 1;
+  background-image: url(images/image154.png);
+  display: flex;
+  flex-direction: column;
+}
+
+.sBarLogo {
+  width: 96px;
+  height: 54px;
+  opacity: 1;
+  margin: 2rem auto;
+  color: #333448;
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.searchBox {
+  width: 609px;
+  height: 48px;
+  opacity: 1;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+}
+
+.searchBox svg {
+  color: #2E2F2E;
+  position: relative;
+  left: 50px;
+}
+
+.searchBox input:focus {
+  outline: none;
+}
+
+.searchBox input {
+  width: 539px;
+  height: 48px;
+  opacity: 1;
+  border-radius: 12px;
+  border-width: 1px;
+  border: none;
+  padding-left: 40px;
+}
+
+.bag {
+  width: 50px;
+  height: 48px;
+  border-radius: 7px;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+#bagIco {
+  left: 0px;
+}
+
+/*Searchbar End*/
+
+/*Category Filter*/
+.categoryFilter {
+  width: 742px;
+  height: 101px;
+  opacity: 1;
+  margin: 2rem auto;
+  display: flex;
+  justify-content: space-around;
+  color: #2E2F2E;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 18px;
+
+}
+
+.cfOut {
+  width: 84px;
+  height: 84px;
+  opacity: 1;
+  border-radius: 100px;
+  background-color: white;
+  display: flex;
+  cursor: pointer;
+}
+
+.cfIn {
+  width: 64px;
+  height: 64px;
+  border-radius: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+  background-color: #E0E8E2;
+}
+
+.cfBtn {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 18px;
+  line-height: 18px;
+}
+
+/*Category Filter End*/
+
+
+/*Product Panel*/
+.productPanel {
+  display: flex;
+  justify-content: space-around;
+  padding: 0px 10rem;
+  margin-bottom: 8rem;
+  margin-top: 1rem;
+}
+
+.pNext {
+  border-radius: 50%;
+  width: 70px;
+  height: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  background-color: #FFFFFF;
+  color: #A5A5A5;
+  border: 1px solid #A5A5A5;
+  margin-top: auto;
+  margin-bottom: auto;
+  position: relative;
+  top: -50px;
+}
+
+.proHeading {
+  width: 195px;
+  height: 30px;
+  position: relative;
+  left: 11%;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 29px;
+}
+
+/*Product Panel End*/
+
+/*Product Card*/
+.proCard {
+  width: 362px;
+  height: 532px;
+  cursor: pointer;
+}
+
+.proImg img {
+  width: 360px;
+  height: 400px;
+  border-radius: 14.48px;
+}
+
+.proInfo {
+  display: flex;
+  flex-direction: row;
+}
+
+.pStars {
+  width: 113.33333587646484px;
+  height: 17px;
+  opacity: 1;
+  gap: 1.81px;
+  display: flex;
+  margin: auto;
+}
+
+.pInfo {
+  display: flex;
+  flex-direction: column;
+  width: 322.0952453613281px;
+  height: 101.47618865966797px;
+  gap: 7.24px;
+}
+
+.pName {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-size: 15.5px;
+  line-height: 26.24px;
+  text-align: center;
+  margin-bottom: 0px;
+}
+
+.pAQ {
+  margin: 0px;
+  color: #2E2F2E;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 16.29px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.pBtn {
   display: flex;
-  flex-direction: column;
+}
+
+.proAdd {
+  color: white;
+  background-color: #3A643B;
+  width: 30px;
+  height: 30px;
+  border-radius: 7px;
+  border: none;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  cursor: pointer;
+  margin-top: auto;
+
+  position: relative;
+  top: 25px;
+  right: -8px;
+}
+
+/*Product Card End*/
+
+/*App Download Section*/
+.ADS {
+  border-top: 1px solid #676767;
+  display: flex;
+  padding: 5rem 10rem;
+}
+
+.appDownText {
+  width: 530px;
+  height: 96px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 140%;
+  text-transform: capitalize;
+  color: #3A643B;
+}
+
+.appDownInfo {
+  width: 474px;
+  height: 78px;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 100%;
+  color: #676767;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+
+.adsFeatures {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+
+.featureBox {
+  width: 220px;
+  height: 81px;
+  border-radius: 16px;
+  border-width: 1px;
+  border: 1px solid #676767;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  gap: 16px;
+}
+
+.fBoxFeature {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 140%;
+  text-transform: capitalize;
+  color: #3A643B;
+  display: flex;
+  width: 8rem;
+}
+
+.fboxImg {
+  width: 40px;
+  height: 40px;
+  border: 2px solid #3A643B;
+  border-radius: 50%;
+  display: flex;
+}
+
+.fboxImg img {
+  width: 32px;
+  height: 32px;
+  margin: auto;
+}
+
+.appDownload {
+  display: flex;
+  margin: 3rem 0px;
+  gap: 1rem;
+}
+
+.playStore {
+  background-image: url(images/playStore.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 236px;
+  height: 70px;
+  cursor: pointer;
+}
+
+.appStore {
+  background-image: url(images/appStore.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 236px;
+  height: 70px;
+  cursor: pointer;
+}
+
+.appInfo {
+  width: 50%;
+}
+
+.appImg {
+  width: 50%;
+}
+
+.lowImg {
+  height: 35%;
+}
+
+.upImg {
+  height: 65%;
+  display: flex;
+  padding: 0px 3rem;
+}
+
+.uigBox {
+  width: 195px;
+  height: 140px;
+  border-radius: 16px;
+  background-color: #3A643B;
+  overflow: hidden;
   color: white;
+  box-sizing: border-box;
+  margin: auto;
 }
 
-.App-link {
-  color: #61dafb;
+.uibTitle {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 100%;
+  margin: 1rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.uibTime {
+  font-weight: 700;
+  font-style: Bold;
+  font-size: 18px;
+  line-height: 100%;
+  margin-left: 1rem;
 }
+
+.uigBox svg {
+  position: relative;
+  top: 30px;
+}
+
+.uigCircle {
+  width: 283px;
+  height: 283px;
+  border-radius: 50%;
+  background-color: #DFDFC7;
+  overflow: hidden;
+  color: white;
+  box-sizing: border-box;
+  margin: auto;
+}
+
+.iphoneImg {
+  width: 300px;
+  height: 401px;
+  background-image: url(images/iPhone.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.ligBox {
+  background-color: #DFDFC7;
+  width: 160px;
+  height: 140px;
+  border-radius: 16px;
+  overflow: hidden;
+  color: white;
+  box-sizing: border-box;
+  margin: auto;
+  border: 1px solid #3A643B4F;
+}
+
+.libTitleLt {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 100%;
+  text-align: center;
+}
+
+.libImg {
+  position: relative;
+  width: 100%;
+  height: 60px;
+  margin: 12px 0px;
+}
+
+.libTitle p {
+  margin: 0px;
+}
+
+.libTitle {
+  height: 50%;
+  margin: 0px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 100%;
+  color: #3A643B;
+  text-align: center;
+}
+
+.libProImg {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  border: 2px solid white;
+  background-size: cover;
+  background-position: center;
+  position: absolute;
+}
+
+.img1 {
+  left: 10%;
+  background-image: url(images/image99.jpg);
+  z-index: 1;
+}
+
+.img2 {
+  left: 30%;
+  background-image: url(images/image98.jpg);
+  z-index: 2;
+}
+
+.img3 {
+  right: 10%;
+  background-image: url(images/image99.jpg);
+  z-index: 1;
+}
+.uibArrow1{
+  position: relative;
+  top: 15%;
+  right: 65%;
+  width: 0px;
+  height: 0px;
+}
+
+.uibArrow2{
+  position: relative;
+  top: 90%;
+  right: 35%;
+  width: 0px;
+  height: 0px;
+}
+
+/*App Download Section End*/
+
+/*Footer*/
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 40px 100px 40px 40px;
+  background-color: #dae2dc;
+  color: #2c2c2c;
+  flex-wrap: wrap;
+}
+
+.footer-col {
+  flex: 1;
+  min-width: 250px;
+  margin: 20px;
+}
+
+.footer-col h4 {
+  color: #3A643B;
+  font-weight: 600;
+  margin-bottom: 16px;
+}
+
+.footer-col ul {
+  list-style: none;
+  padding: 0;
+}
+
+.footer-col ul li a {
+  color: #2c2c2c;
+  text-decoration: none;
+}
+
+.footer-col ul li a:hover {
+  text-decoration: underline;
+}
+
+.newsletter-form {
+  display: flex;
+  margin-top: 15px;
+}
+
+.newsletter-form input {
+  padding: 10px 15px;
+  border: 1px solid #2c4a2b;
+  border-right: none;
+  border-radius: 50px 0 0 50px;
+  outline: none;
+  flex: 1;
+}
+
+.newsletter-form button {
+  padding: 10px 20px;
+  background-color: #000;
+  color: white;
+  border: none;
+  border-radius: 0 50px 50px 0;
+  cursor: pointer;
+}
+/*Footer End*/
